# phoxif

./: .gitignore  CLAUDE.md  README.md  config.example.yaml  main.py  pyproject.toml
docs/: design.md  workflow.md
docs/mockup/: index.html
frontend/: index.html  package-lock.json  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css  main.tsx  types.ts
frontend/src/components/: ConfirmScreen.tsx  DateDetail.tsx  DoneScreen.tsx  DuplicateDetail.tsx  DuplicateGroup.tsx  ExecuteScreen.tsx  HistoryScreen.tsx  NonPhotosDetail.tsx  OrientationDetail.tsx  RenameDetail.tsx  ReviewScreen.tsx  ScanScreen.tsx  SimilarDetail.tsx  StepBar.tsx  SummaryCard.tsx  Thumbnail.tsx
phoxif/: __init__.py  config.py  convert.py  organize.py  sorter.py  write_gps.py
phoxif/api/: actions.py  app.py  classifier.py  logger.py  orientation_ai.py  rename.py  routes.py  scanner.py  similar.py
